--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <version>1.2.1</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
+        </dependency>
     </dependencies>
 
     <build>
