--- a/classes/artifacts/servlet_jsp/WEB-INF/classes/database.properties
+++ b/classes/artifacts/servlet_jsp/WEB-INF/classes/database.properties
@@ -1,4 +1,12 @@
-database = db3
+#database = db3
+#serverName = localhost
+#port = 3306
+#user = root
+#password = root
+#useSSL = false
+#autoReconnect = true
+
+database = q
 serverName = localhost
 port = 3306
 user = root
